@@ -319,12 +319,14 @@ pre {
 #center_column { 
   width: 75%;
   float: left;
+/*  border: 1px solid black;*/
 }
 
 #sidebar_r { 
   background-color: #9EBF8A; /* light olive */
-  width: 20%;
-  float: left;
+  width: 24%;
+  float: right;
+/*  border: 1px solid black;*/
  }
 
 #content { 
@@ -483,4 +485,12 @@ div.title {
 
 .podcast_entry_summary { 
   margin-left: 2em;
+}
+
+/*
+** Main page
+*/
+.mainpage { 
+  font-size: 120%;
+  margin: 1em;
 }
