@@ -1,3 +1,8 @@
+2006-11-04  Doug Hellmann  <dhellmann@racemi.com>
+
+	* static/css/site.css (sidebar_r): Change float to right and
+	increase the width to 24% to take up more of the available space.
+
 2006-10-29  Doug Hellmann  <dhellmann@racemi.com>
 
 	* static/js/oneoffcast/user.js (get_mimetype_icon): Function to
